--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nodemon": "^2.0.19"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "mongodb": "^4.9.0",
     "pug": "^3.0.2"
