--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "mongodb": "^4.9.0",
+    "mongoose": "^6.5.2",
     "pug": "^3.0.2"
   }
 }
